# rust-playground

10_generics_traits_lifetimes/generics/: Cargo.toml
10_generics_traits_lifetimes/lifetimes/: Cargo.toml
10_generics_traits_lifetimes/traits/: Cargo.toml
11_tests/test_project/: Cargo.toml
12_io_project/io_project/: Cargo.toml
13_functional_features/closures/: Cargo.toml
13_functional_features/io_project_with_iterators/: Cargo.toml
13_functional_features/iterators/: Cargo.toml
14_more_cargo_and_crates/: binaries.MD
14_more_cargo_and_crates/more_cargo_and_crates/: Cargo.toml
15_smart_pointers/memory_leaks/: Cargo.toml
15_smart_pointers/smart_pointers/: Cargo.toml
16_fearless_concurrency/threads/: Cargo.toml
17_oop/blog/: Cargo.toml
17_oop/blog/src/: lib.rs
17_oop/blog_refactored/: Cargo.toml
17_oop/oop/: Cargo.toml
18_patterns_and_matching/patterns_and_matching/: Cargo.toml
19_advanced_features/advanced_functions_and_closures/: Cargo.toml
19_advanced_features/advanced_traits/: Cargo.toml
19_advanced_features/advanced_types/: Cargo.toml
19_advanced_features/macros/: Cargo.toml
19_advanced_features/macros_2/ageo_macro_derive/: Cargo.toml
19_advanced_features/macros_2/ageo_macro_derive/src/: lib.rs
19_advanced_features/macros_2/macro_user/: Cargo.toml
19_advanced_features/macros_2/macro_user/src/: main.rs
19_advanced_features/unsafe/: Cargo.toml
1_cargo/cargo/: Cargo.toml
20_server_project/multi_threaded/: Cargo.toml
9_error_handling/unrecoverable_errors/: Cargo.toml
9_error_handling/unrecoverable_errors/src/: main.rs
(+55 files in other folders)
