[package]
name = "unrecoverable_errors"
version = "0.1.0"
authors = ["Alexandre Georges <alexandre.georges.pro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
# This prevents the program from cleaning the memory, it exits quickly
panic = 'abort'