[package]
name = "ageo_macro_derive"
version = "0.1.0"
authors = ["Alexandre Georges <alexandre.georges.pro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
