[package]
name = "macro_user"
version = "0.1.0"
authors = ["Alexandre Georges <alexandre.georges.pro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ageo_macro = { path = "../ageo_macro" }
ageo_macro_derive = { path = "../ageo_macro_derive" }
